--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,9 @@
-
 @import "./_variables.css";
 
-  @import url('https://fonts.googleapis.com/css2?family=Asap:wght@100&family=Exo+2:wght@700&family=Rubik+Iso&family=Yanone+Kaffeesatz&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Asap:wght@100&family=Exo+2:wght@700&family=Rubik+Iso&family=Yanone+Kaffeesatz&display=swap");
 
 @import "./_general.css";
 @import "./_header.css";
 @import "./_main.css";
 @import "./_footer.css";
-
-
+@import "./_cards.css"
