--- a/css/_main.css
+++ b/css/_main.css
@@ -1,1 +1,13 @@
+.principal {
+  box-sizing: border-box;
+  display: grid;
+  grid-template-columns: 3fr 4fr;
+ grid-auto-flow: colum;
 
+  
+}
+
+img{
+    width: 70%;
+    height: 60%;
+}
