Agregar formularios de ingreso registro

--- a/css/style.css
+++ b/css/style.css
@@ -6,4 +6,5 @@
 @import "./_header.css";
 @import "./_main.css";
 @import "./_footer.css";
-@import "./_cards.css"
+@import "./_cards.css";
+@import "./_form.css";
