--- a/css/_general.css
+++ b/css/_general.css
@@ -4,7 +4,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  /* border: 1px solid rgb(100, 74, 74); */
+   border: 1px solid rgb(100, 74, 74); 
   /* display: grid;
     grid-template-rows:15% 70% 15%; */
 }
