--- a/css/_header.css
+++ b/css/_header.css
@@ -1,22 +1,27 @@
 nav {
   display: grid;
-  grid-template-columns: 1fr 3fr 2fr;
+  grid-template-columns: 1fr 3fr 2fr 1fr;
 
   background-color: var(--bg1-color);
   align-items: center;
-  padding: 20px 40px;
+  padding: 10px 40px;
   justify-content: space-between;
- 
 }
 
 nav h1 {
+  display: flex;
   color: var(--primary-color);
+  font-size: 2.5em;
+  font-weight: 700;
+  justify-content: center;
 }
 
 nav ul {
+  
   padding: 10px;
   display: flex;
-justify-content: space-evenly;
+  justify-content: space-evenly;
+
   gap: 20px;
 }
 
@@ -25,9 +30,10 @@ justify-content: space-evenly;
   justify-content: space-evenly;
   padding: 10px;
   font-family: var(--ff4);
-  
 }
-#login, #signIn{
+#login,
+#signIn {
+  display: flex;
   border-radius: 6px;
   color: white;
   padding: 5px 10px;
@@ -38,19 +44,79 @@ justify-content: space-evenly;
   /* display: none; */
   cursor: pointer;
   list-style: none;
-  
 }
-a{
-  
+a {
   color: blue;
 }
+
 #logoCia {
   width: 68%;
   height: 78%;
 }
-.suscr{
+.suscr {
   display: flex;
 }
+
+/* ****************************
+GENERAR EL MENU HAMBURGUESA
+***************************/
+
+#ul-hamburguesa{
+  display: none;
+}
+
+#menu{
+  display:none;
+}
+#menu:checked  ~ ul{
+  display:block;
+}
+#label-hamburguesa {
+  box-sizing: border-box;
+  display: flow-root;
+  border: 1px solid black;
+  border-radius: 5px;
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  font-weight: bold;
+  text-align: center;
+  user-select: none;
+}
+
+/* Estilo del boton cuando se pasa el mouse por encima*/
+#label-hamburguesa:hover{
+  background: grey;
+}
+
+/* Estilo del boton cuando el menú está expandido*/
+#menu:checked ~ label {
+  background: lightgrey; 
+}
+
+#ul-hamburguesa{
+  margin-top:0;
+  padding: 0;
+  width: 200px;
+
+}
+
+
+#li-hamburguesa {
+  display:flow-root;
+  background: lightgrey;
+  margin: 0;
+  padding: 10px;
+  list-style: none;
+  border-bottom: 1px solid grey;
+  border-radius: 3px;
+}
+
+/*Estilo cuando el mouse pasa encima de cada link del menu*/
+#li-hamburguesa:hover {
+  filter: brightness(110%);
+}
+
 
 /* MEDIA QUERY  para que el bloque 
 de código css sea responsive */
@@ -58,7 +124,6 @@ de código css sea responsive */
 @media screen and (max-width: 720px) {
   .menubar {
     display: block;
-
   }
 
   nav {
@@ -74,5 +139,16 @@ de código css sea responsive */
     display: flex;
     flex-direction: column;
     gap: 20px;
+    align-items: center;
+  }
+  #btns {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    padding: 10px;
+    gap: 0.2em;
+    font-family: var(--ff4);
+    align-content: center;
+    align-items: center;
   }
 }
