--- a/css/_header.css
+++ b/css/_header.css
@@ -138,7 +138,7 @@ de código css sea responsive */
     display: flex;
     background-color: var(--bg-color);
     align-items: center;
-    padding: 20px 40px;
+    padding: 10px 20px;
     justify-content: space-between;
     /* position: static; */
     flex-direction: column;
@@ -146,7 +146,7 @@ de código css sea responsive */
   nav ul {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 10px;
     align-items: center;
   }
   #btns {
@@ -158,5 +158,10 @@ de código css sea responsive */
     font-family: var(--ff4);
     align-content: center;
     align-items: center;
+  }
+
+  #logoCia {
+    width: 58%;
+    height: 68%;
   }
 }
