--- a/css/_general.css
+++ b/css/_general.css
@@ -1,14 +1,9 @@
-*{
-  border: 1px solid rgb(100, 74, 74);
+/* *{
+  border: 1px solid rgb(37, 58, 179);
 
-}
+} */
 body {
-  /* margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-   border: 1px solid rgb(100, 74, 74);  */
-  /* display: grid;
-    grid-template-rows:15% 70% 15%; */
+ 
   display: flex;
   flex-direction: column;
   min-height: 100vh;
