--- a/css/_infoVideos.css
+++ b/css/_infoVideos.css
@@ -13,14 +13,25 @@
   margin-top: 0.5rem;
   justify-items: center;
   padding: 1em;
+  background-color: rgb(122, 122, 204);
+}
+#labelBusqueda {
+  color: white;
+  font-weight: bold;
+  border: none;
+  border-radius: 3px;
+  padding: 2px 5px 2px 5px;
 }
 #busqueda {
   display: flex;
   border-radius: 5px;
   min-width: 25em;
 }
-#titpeli{
-text-align: center;
+#titpeli {
+  text-align: center;
+  width: fit-content;
+  height: fit-content;
+
 }
 #buscar {
   display: flex;
@@ -61,9 +72,11 @@ table {
 #aside2 {
   display: flex;
   flex-direction: column;
-
+  position: relative;
   margin-right: 10px;
+  overflow-y: scroll;
 }
+
 #imgPeli {
   border: none;
   width: 300px;
