--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import "./_variables.css";
+@import "./variables.css";
 @import "./_recoveryPass.css";
 @import url("https://fonts.googleapis.com/css2?family=Asap:wght@100&family=Exo+2:wght@700&family=Rubik+Iso&family=Yanone+Kaffeesatz&display=swap");
 
