--- a/css/v_infoVideos.css
+++ b/css/v_infoVideos.css
@@ -47,6 +47,11 @@
   background-color: rgb(102, 85, 85);
   color: black;
 }
+table {
+  padding-top: 5px;
+  max-width: 800px;
+}
+
 th {
   text-align: center;
 }
@@ -59,9 +64,8 @@ th {
   font-size: 1.2em;
   background-color: rgb(199, 236, 224);
 }
-table {
-  padding-top: 5px;
-  max-width: 800px;
+#td-anio, #td-imdb{
+  font-size: .9em;
 }
 #botonBuscarVideo {
   border-radius: 5px;
