--- a/css/v_infoVideos.css
+++ b/css/v_infoVideos.css
@@ -64,8 +64,9 @@ th {
   font-size: 1.2em;
   background-color: rgb(199, 236, 224);
 }
-#td-anio, #td-imdb{
-  font-size: .9em;
+#td-anio,
+#td-imdb {
+  font-size: 0.9em;
 }
 #botonBuscarVideo {
   border-radius: 5px;
@@ -107,4 +108,35 @@ th {
 }
 #poster {
   object-fit: cover;
+}
+
+#tablaAlquilar {
+  background-color: #edc4b3;
+  color: #774936;
+}
+
+#precio-alquiler {
+  color: blue;
+  background-color: rgb(216, 235, 240);
+  border-color: #000 #333 #333 #000; 
+   box-shadow: 0 0 0 4px #2d2577;
+  padding: 5px;
+}
+
+#btn-alquilar{
+  padding: 5px 15px;
+  background-color: #b0fc72;
+  border-bottom: 1px solid grey;
+  border-radius: 5px;
+  font-family: var(--ff1);
+  transition: transform 0.3s ease;
+}
+#btn-alquilar:hover{
+  padding: 5px 15px;
+  background-color: #cca2ba;
+  border-bottom: 1px solid grey;
+  border-radius: 5px;
+  font-family: var(--ff1);
+ transform: scale(1.1);
+ 
 }
