--- a/css/v_main.css
+++ b/css/v_main.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
 
   display: grid;
- 
+
   grid-template-columns: 3fr 4fr;
   grid-auto-flow: colum;
   padding-top: 10px;
@@ -20,11 +20,17 @@ aside {
   padding: 5px 10px 5px 10px;
 }
 
+#peliculasMuestras {
+  margin-top: 2em;
+  overflow: hidden;
+}
 
-  #peliculasMuestras {
-    margin-top: 1em;
-    
-    overflow: hidden; /* esto evita que el contenido se salga de la caja */
-   }
- 
-
+#forrest {
+  display:flex;
+  margin-top: 5px;
+  padding: 0.1em;
+  overflow: hidden;
+  border: 3px black solid;
+  border-radius: 5px;
+  box-shadow: 16px 14px 20px #0000008c;
+  }
