--- a/css/v_header.css
+++ b/css/v_header.css
@@ -1,7 +1,7 @@
 nav {
   /* border: 1px solid brown; */
   display: grid;
-  grid-template-columns: 1fr 3fr 3fr .5fr;
+  grid-template-columns: 1fr 3fr 3fr 0.5fr;
 
   background-color: var(--bg1-color);
   align-items: center;
@@ -51,18 +51,51 @@ nav ul {
   display: flex;
   border-radius: 6px;
   color: rgb(26, 24, 24);
- 
+
   background-color: rgb(192, 192, 216);
   font-weight: bold;
-  font-size: .7em;
+  font-size: 0.7em;
 }
 .menubar {
   /* display: none; */
   cursor: pointer;
   list-style: none;
 }
+
+.menubar > li {
+  /* border: 1px black solid; */
+  padding: 5px 10px;
+  border-radius: 8px;
+
+  font-weight: bold;
+  background: #636363; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #a2ab58,
+    #636363
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #a2ab58,
+    #636363
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+.menubar > li:hover {
+  background: #f09819; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #edde5d,
+    #f09819
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #edde5d,
+    #f09819
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
 a {
-  color: blue;
+  color: rgb(10, 10, 78);
 }
 
 #logoCia {
