--- a/css/v_main.css
+++ b/css/v_main.css
@@ -10,8 +10,6 @@
 
 img {
   box-sizing: content-box;
-  /* max-width: 350px; */
-  /*height: 390px; */
   max-height: 390px;
   margin-left: 15%;
 }
@@ -34,3 +32,7 @@ aside {
   border-radius: 5px;
   box-shadow: 16px 14px 20px #0000008c;
   }
+#aside-span {
+  font-family: var(--ff1);
+  font-size: 1.2em;
+}
