--- a/app/templates/alquilarPeliculas.html
+++ b/app/templates/alquilarPeliculas.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TPO Grupo 18 - InfoVideos</title>
+    <title>TPO Grupo 18 - Alquilar Peliculas</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,8 +16,15 @@
       href="https://fonts.googleapis.com/css2?family=Exo+2:wght@700&family=Rubik+Iso&family=Yanone+Kaffeesatz&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../css/style.css" />
-    <link rel="icon" type="image/x-icon" href="../img/favicon.ico" />
+    <link
+      rel="stylesheet"
+      href="{{url_for('static', filename='css/style.css')}}"
+    />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="{{url_for('static', filename='img/favicon.ico')}}"
+    />
   </head>
   <body>
     <header>
@@ -34,14 +41,14 @@
             placeholder="mínimo 3 letras"
           />
         </div>
-        <table>
-          <thead>
+        <table id="tablaAlquilar">
+          <thead id="tablaAlquilar">
             <tr>
-              <th id="th-titulo">Título</th>
-              <th id="th-anio">Año</th>
-              <th id="th_califIMDB">IMDB ID</th>
-              <th id="th-tipo">Tipo</th>
-              <th id="th-detalle"></th>
+              <th id="tablaAlquilar">Título</th>
+              <th id="tablaAlquilar">Año</th>
+              <th id="tablaAlquilar">IMDB ID</th>
+              <th id="tablaAlquilar">Tipo</th>
+              <th id="tablaAlquilar"></th>
             </tr>
           </thead>
           <tbody id="tbody-table"></tbody>
@@ -54,6 +61,8 @@
           <div id="info">
             <p id="anio"></p>
             <p id="valueIMDB"></p>
+            <p id="precio"></p>
+            <p id="botonAlquilar"></p>
           </div>
         </div>
         <p id="genre"></p>
@@ -76,8 +85,9 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="../js/omdb.js"></script>
-    <script src="../js/modelado.js"></script>
-    <script src="../js/videos.js"></script>
+    <script src="{{url_for('static', filename='js/omdb.js')}}"></script>
+    <script src="{{url_for('static', filename='js/modelado.js')}}"></script>
+    <script src="{{url_for('static', filename='js/alquiler.js')}}"></script>
+    
   </body>
 </html>
