--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,8 +16,8 @@
       href="https://fonts.googleapis.com/css2?family=Exo+2:wght@700&family=Rubik+Iso&family=Yanone+Kaffeesatz&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/style.css" />
-    <link rel="icon" type="image/x-icon" href="./img/favicon.ico" />
+    <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" />
+    <link rel="icon" type="image/x-icon" href="{{url_for('static', filename='img/favicon.ico')}}" />
   </head>
   <body>
     <header>
@@ -70,8 +70,9 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="./js/omdb.js"></script>
-    <script src="./js/modelado.js"></script>
-    <script src="./js/login.js"></script>
+    <script src="{{url_for('static', filename='js/omdb.js')}}"></script>
+    <script src="{{url_for('static', filename='js/modelado.js')}}"></script>
+    <script src="{{url_for('static', filename='js/login.js')}}"></script>
+    <script src="{{url_for('static', filename='js/altaCliente.js')}}"></script>
   </body>
 </html>
