--- a/app/templates/pagoAlquiler.html
+++ b/app/templates/pagoAlquiler.html
@@ -16,8 +16,15 @@
       href="https://fonts.googleapis.com/css2?family=Exo+2:wght@700&family=Rubik+Iso&family=Yanone+Kaffeesatz&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../css/style.css" />
-    <link rel="icon" type="image/x-icon" href="../img/favicon.ico" />
+    <link
+      rel="stylesheet"
+      href="{{url_for('static', filename='css/style.css')}}"
+    />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="{{url_for('static', filename='img/favicon.ico')}}"
+    />
   </head>
   <body>
     <header>
@@ -288,7 +295,8 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="../js/modelado.js"></script>
-    <script src="../js/pagar.js"></script>
-  </body>
+
+    <script src="{{url_for('static', filename='js/modelado.js')}}"></script>
+    <script src="{{url_for('static', filename='js/pagar.js')}}"></script>
+ </body>
 </html>
