--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -10,4 +10,5 @@
 @import "./v_infoVideos.css";
 @import "./v_creditCard.css";
 @import "./v_pagoAprobado.css";
-@import "./v_quienesSomos.css"
+@import "./v_quienesSomos.css";
+@import "./v_listaPeliculas.css";
