--- a/app/static/css/v_main.css
+++ b/app/static/css/v_main.css
@@ -13,9 +13,23 @@ img {
   max-height: 390px;
   margin-left: 15%;
 }
-
+#infoGral {
+  margin-top: 10px;
+  margin-left: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 10px;
+}
+#registrar{
+  text-align: center;
+  font-size: 1em;
+}
+#referencia {
+  font-weight: bold;
+  font-style: italic;
+  font-size: 1.3em;
+}
 aside {
-
   padding: 5px 10px 5px 10px;
 }
 
@@ -25,14 +39,14 @@ aside {
 }
 
 #forrest {
-  display:flex;
+  display: flex;
   margin-top: 5px;
   padding: 0.1em;
   overflow: hidden;
   border: 3px black solid;
   border-radius: 5px;
   box-shadow: 16px 14px 20px #0000008c;
-  }
+}
 #aside-span {
   font-family: var(--ff1);
   font-size: 1.2em;
