--- a/app/templates/quienesSomos.html
+++ b/app/templates/quienesSomos.html
@@ -36,10 +36,10 @@
         <p id="nombre1">...</p>
         <br>
         <p id="email">
-          <img src="{{url_for('static', filename='img/mensaje.gif')}}" alt="mail" id="img-mail" /><strong
-            > hector.cicutti@gmail.com</strong
+          <a href="mailto:hector.cicutti@gmail.com">  <img src="{{url_for('static', filename='img/mensaje.gif')}}" alt="mail" id="img-mail" /><strong
+            > hector.cicutti@gmail.com</strong 
           >
-          
+          </a>
         </p>
         <p id="github">
           
