ver si puedo generar eliminar

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -12,4 +12,5 @@
 @import "./v_pagoAprobado.css";
 @import "./v_quienesSomos.css";
 @import "./v_listaPeliculas.css";
-@import "./v_cartel.css"
+@import "./v_cartel.css";
+@import "./v_eliminaCuenta.css";
